testsuite/tests/parser/should_fail/T12488c.hs
{-# LANGUAGE PatternSynonyms #-}
module T12488c ( T (pattern A) ) where

data T = A