testsuite/tests/parser/should_fail/T12488c.stderr
T12488c.hs:2:21: error: [GHC-58481] parse error on input ‘pattern’

